<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:background="#d3d3d3"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp">


                <TextView
                    android:id="@+id/contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:textSize="16sp"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/contacts"
                    android:layout_toRightOf="@+id/contacts"
                    android:gravity="left"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_at_grey600_24dp"/>


                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dots"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_phone_grey600_24dp"/>

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dots"
                            android:textSize="16sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_web_grey600_24dp"/>

                        <TextView
                            android:id="@+id/website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dots"
                            android:textSize="16sp"/>

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp">


                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/address"
                    android:layout_toRightOf="@+id/address"
                    android:layout_marginLeft="5dp"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/full_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_mailbox_grey600_24dp"/>


                        <TextView
                            android:id="@+id/zipcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dots"
                            android:textSize="16sp"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@mipmap/ic_map_marker_grey600_24dp"/>


                        <TextView
                            android:id="@+id/coordinates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dots"
                            android:textSize="16sp"/>
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5dip"
                    android:background="#d3d3d3"/>


                <TextView
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/catchPhrase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/catchPhrase"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/business_services"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/business_services"
                        android:textSize="14sp"/>


                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:layout_marginTop="10dp"
                android:background="#d3d3d3"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/loading_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/black_alpha"
            android:gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messages_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/black_alpha"
            android:scrollbars="vertical"/>

    </RelativeLayout>
</ScrollView>
